# ACE-Step-1.5

./: .env.example  .gitignore  README.md  check_update.sh  cli.py  profile_inference.py  pyproject.toml  requirements.no_flash.txt
acestep/: audio_utils.py  audio_utils_test.py  gpu_config.py  gpu_config_test.py  handler.py  inference.py  llm_inference.py  model_downloader.py  model_downloader_test.py  null_duration_fixes_test.py
acestep/api/: job_generation_setup.py  job_generation_setup_test.py  job_result_payload.py  lifespan_runtime.py
acestep/api/http/: model_init_service.py  model_init_service_test.py  model_service_routes.py  model_service_routes_http_test.py  release_task_models.py  release_task_request_builder.py
acestep/core/generation/handler/: conditioning_batch.py  conditioning_batch_test.py  conditioning_embed_test.py  conditioning_masks.py  conditioning_masks_test.py  cover_noise_strength_forwarding_test.py  diffusion.py  generate_music.py  generate_music_decode.py  generate_music_execute.py  generate_music_payload.py  generate_music_request.py  generate_music_request_test.py  generate_music_test.py  init_service_catalog.py  init_service_loader.py  init_service_memory_basic.py  init_service_offload_context.py  init_service_orchestrator.py  init_service_setup.py  init_service_test.py  io_audio.py  io_audio_test.py  lyric_alignment_common.py  lyric_alignment_test.py  memory_utils.py  mlx_vae_native_test.py  padding_utils.py  repaint_step_injection.py  repaint_step_injection_test.py  repaint_waveform_splice.py  repaint_waveform_splice_test.py  resolve_repaint_config_test.py  service_generate.py  service_generate_execute.py
acestep/models/base/: modeling_acestep_v15_base.py
acestep/models/common/: apg_guidance.py  configuration_acestep_v15.py
acestep/models/mlx/: dit_generate.py  dit_generate_sampler_test.py  dit_model.py
acestep/models/sft/: modeling_acestep_v15_base.py
acestep/models/turbo/: modeling_acestep_v15_turbo.py
acestep/models/xl_base/: apg_guidance.py  modeling_acestep_v15_xl_base.py
acestep/models/xl_turbo/: modeling_acestep_v15_xl_turbo.py
acestep/training/: lora_injection.py
acestep/training/dataset_builder_modules/: preprocess.py
acestep/training_v2/: configs.py  fixed_lora_module.py  fixed_lora_module_test.py  gpu_utils.py  model_discovery.py  model_loader.py  tensorboard_checkpoint_preview.py  tensorboard_checkpoint_preview_test.py  tensorboard_generated_preview.py  tensorboard_generated_preview_test.py  tensorboard_preview.py  tensorboard_preview_test.py  tensorboard_utils.py  trainer_basic_loop.py  trainer_basic_loop_resume_test.py  trainer_fixed.py  trainer_helpers.py  trainer_helpers_resume_test.py  trainer_helpers_test.py
acestep/training_v2/cli/: args.py  common.py  config_builder.py  train_fixed.py  train_fixed_standalone_test.py  train_vanilla.py
acestep/training_v2/ui/: flows_estimate.py
acestep/ui/gradio/api/: api_routes.py
acestep/ui/gradio/events/: generation_handlers_test.py
acestep/ui/gradio/i18n/: en.json  he.json  ja.json  zh.json
acestep/ui/gradio/interfaces/: __init__.py  generation_advanced_dit_controls.py  generation_advanced_output_controls.py  generation_defaults.py  generation_service_config_rows.py  generation_tab_generate_controls.py  generation_tab_secondary_controls.py  user_preferences.js  user_preferences.py  user_preferences_test.py
dev_infer/: README.md  __init__.py  __main__.py  cli.py  run_verified_text2music.sh  runtime.py  schemas.py  tasks.py  test_dev_infer.py
dev_infer/examples/Cover/: example_01.json  example_02.json  example_03.json
dev_infer/examples/repaint/: README.md  example_01.json  example_02.json  example_03.json
dev_infer/examples/text2music/: example_01.json  example_02.json  example_03.json  example_05.json
dev_infer/output/text2music/full_sft_turbo_example_04/: example.original.json  example.resolved.json  metadata.json  status.txt
dev_infer/output/text2music/lora_turbo_example_04/: example.resolved.json  metadata.json  prompt.txt  (+1 more)
docs/en/: API.md  GPU_COMPATIBILITY.md  GPU_TROUBLESHOOTING.md  GRADIO_GUIDE.md  INFERENCE.md  INSTALL.md  LoRA_Training_Tutorial.md  Tutorial.md  ace_step_musicians_guide.md
docs/ja/: GPU_COMPATIBILITY.md  INSTALL.md  Tutorial.md
docs/ko/: GPU_COMPATIBILITY.md  Tutorial.md
docs/zh/: GPU_COMPATIBILITY.md  INSTALL.md  Tutorial.md
muse-sft-test/: Muse-JSONL-2-ACE-Step.py  README.md  readme.py  resume_general_training_reviews.md  resume_sft_training_reviews.md
muse-sft-test/output/: resume_training_commands.md
(+29 files in other folders)
